workaround for files.readString not working in intellij